--- a/.github/workflows/deployment.yml
+++ b/.github/workflows/deployment.yml
@@ -9,9 +9,17 @@ jobs:
             - name: CD to workdir
               run: cd ./node-app
 
+            - name: Print Current Working Directory
+              run: pwd
+
+            - name: Setups node
+              uses: actions/setup-node@v3
+              with:
+                  node-version: 18.x
+            
             - name: Install dependencies
               run: npm ci
 
-            - name: Linting actions
+            - name: Lint code
               run: npm run lint
           
