--- a/.github/workflows/deployment.yml
+++ b/.github/workflows/deployment.yml
@@ -1,5 +1,5 @@
 name: CD
-on: [push]
+on: [push, workflow_dispatch]
 jobs:
     build:
         runs-on: ubuntu-latest
@@ -7,7 +7,7 @@ jobs:
             - uses: actions/checkout@v3
 
             - name: CD to workdir
-              run: cd ./node-app
+              run: cd node-app
 
             - name: Print Current Working Directory
               run: pwd
