--- a/.github/workflows/deployment.yml
+++ b/.github/workflows/deployment.yml
@@ -22,4 +22,9 @@ jobs:
 
             - name: Lint code
               run: npm run lint
-          
+            
+            - name: Test code
+              run: npm test
+
+            - name: Build code
+              run: npm run build
