--- a/.github/workflows/isssues.yml
+++ b/.github/workflows/isssues.yml
@@ -9,6 +9,5 @@ jobs:
             - uses: actions/checkout@v2
             
             - name: Print the Issue
-              run: echo ${{ github.event.issue }}
+              run: echo ${{ toJson(github.event.issue) }}
 
-              
