--- a/.github/workflows/deployment_multistep.yml
+++ b/.github/workflows/deployment_multistep.yml
@@ -40,6 +40,9 @@ jobs:
         steps:
             - uses: actions/checkout@v3
 
+            - name: Install dependencies
+              run: npm ci
+
             - name: Build code
               run: npm run build
             
