--- a/.github/workflows/deployment.yml
+++ b/.github/workflows/deployment.yml
@@ -1,5 +1,9 @@
 name: CD Single Step
-on: [push, workflow_dispatch]
+on:
+  # push:
+  #   branches:
+  #     - main
+  workflow_dispatch:
 jobs:
     build:
         runs-on: ubuntu-latest
