--- a/.github/workflows/deployment_multistep.yml
+++ b/.github/workflows/deployment_multistep.yml
@@ -1,5 +1,9 @@
 name: CD Multistep
-on: [push, workflow_dispatch]
+on:
+  # push:
+  #   branches:
+  #     - main
+  workflow_dispatch:
 jobs:
     lint:
         runs-on: ubuntu-latest
